added build root dir check